--- a/frontend/src/components/PositionsView/PositionsView.css
+++ b/frontend/src/components/PositionsView/PositionsView.css
@@ -4,3 +4,57 @@ table {
 th, td {
 	border: 1px solid white;
 }
+.SA-positions-view {
+	display: flex;
+	flex-direction: column;
+	margin: 0;
+	padding-left: 30px;
+	padding-right: 30px;
+	background-color: #F5EFE7;
+	min-height: 100vh;
+	overflow-y: auto;
+}
+.SA-positions-return-link {
+	color: #3E5879;
+	margin: 0;
+	margin-right: 30px;
+	text-decoration: underline;
+}
+.SA-positions-return-link:hover {
+	color: #D8C4B6;
+}
+.SA-positions-link-container {
+	display: flex;
+	justify-content: space-between;
+	padding: 0;
+	margin: 0;
+}
+.SA-positions-info {
+	display: flex;
+	flex-direction: column;
+	align-items: flex-start;
+	text-align: left;
+	margin: 0;
+	padding: 0;
+	color: #213555;
+	gap: 0;
+}
+.SA-positions-info h1 {
+	margin: 0;
+	padding: 0;
+	text-shadow: 1px 1px 1px #3E5879;
+}
+.SA-positions-info h2 {
+	margin: 0;
+	padding: 0;
+	text-shadow: 1px 1px 1px #3E5879;
+}
+.SA-table-buttons {
+	display: flex;
+	justify-content: space-evenly;
+	gap: 2px;
+}
+.SA-positions-link-container-right {
+	display: flex;
+	justify-content: flex-end;
+}
